deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-app
spec:
  replicas: 3
  selector:
    matchLabels: #DEPLOYMENT operates on PODS that have these labels
      app: first-app
  template:
    metadata:
      labels:
        app: first-app #Gives all these pods this label
    spec:
      containers:
      - name: httpbin
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80
